# frappe_pmo

./: README.md  demo.py  hooks.py  install.py  modules.txt  pyproject.toml
api/: powerbi.py
fixtures/: dashboard.json  dashboard_chart.json  role.json  workflow_state.json
isc_pmo/: demo.py  install.py
isc_pmo/fixtures/: custom_field.json  dashboard.json  number_card.json  workflow.json  workflow_action_master.json
isc_pmo/pmo_integrations/: __init__.py  ms_graph.py  teams.py
isc_pmo/pmo_integrations/doctype/: __init__.py
isc_pmo/ppm/: utils.py
pmo_integrations/: calendar_feed.py
pmo_integrations/doctype/ms_graph_token/: ms_graph_token.json  ms_graph_token.py
pmo_integrations/doctype/pmo_integration_settings/: pmo_integration_settings.js  pmo_integration_settings.json  pmo_integration_settings.py
pmo_integrations/doctype/pmo_ms365_settings/: pmo_ms365_settings.js  pmo_ms365_settings.json  pmo_ms365_settings.py
pmo_reports/workspace/project_management/: project_management.json
ppm/doctype/portfolio/: portfolio.py
ppm/doctype/program/: program.py
ppm/doctype/raid_item/: raid_item.json
ppm/doctype/status_report/: status_report.json  status_report.py
public/js/: user_form.js
resources/doctype/bookable_resource/: bookable_resource.json  bookable_resource.py
resources/doctype/bookable_resource_work_hours/: bookable_resource_work_hours.json  bookable_resource_work_hours.py
resources/doctype/resource_assignment/: resource_assignment.py
strategic/: math_utils.py  utils.py
strategic/doctype/imperative/: imperative.json  imperative.py
(+21 files in other folders)
