[project]
name = "isc_pmo"
authors = [
    { name = "International Smart Card (ISC)", email = "pmo@isc.example" },
]
description = "ISC PMO Autopilot — Strategic, Project & Resource Management on ERPNext"
requires-python = ">=3.10"
readme = "README.md"
dynamic = ["version"]
dependencies = []

[build-system]
requires = ["flit_core >=3.4,<4"]
build-backend = "flit_core.buildapi"

[tool.flit.module]
name = "isc_pmo"